# UnitTesting-BenchMarkTask

./: .gitignore  CMakeLists.txt  README.md
BenchMark/: CMakeLists.txt  benchmark.cpp
app/: CMakeLists.txt  main.cpp
include/: codility.h
src/: CMakeLists.txt  codility.cpp
unittest/: CMakeLists.txt  unittest.cpp
